--- a/css/style.css
+++ b/css/style.css
@@ -224,6 +224,12 @@ body {
   color: #f16d7f;
 }
 
+.login:hover .login-drop {
+  -webkit-transform: scale(1, 1);
+  transform: scale(1, 1);
+  z-index: 1;
+}
+
 .login-drop {
   position: absolute;
   width: 262px;
@@ -258,6 +264,10 @@ body {
   justify-content: space-between;
   border-bottom: 1px solid #eaeaea;
   padding: 15px 0;
+}
+
+.login-drop-box img {
+  height: 85px;
 }
 
 .login-drop-text {
@@ -1955,4 +1965,3 @@ td:first-child {
   color: #f16d7f;
 }
 
-/*# sourceMappingURL=style.css.map */
